--- a/.github/workflows/sast.yml
+++ b/.github/workflows/sast.yml
@@ -28,6 +28,7 @@ jobs:
 
       - name: Run Semgrep SAST Scan
         run: |
+          semgrep scan --config auto --config p/security-audit --config p/python --sarif --output semgrep-results.sarif . || true
           semgrep scan --config auto --config p/security-audit --config p/python --json --output semgrep-results.json . || true
           semgrep scan --config auto --config p/security-audit --config p/python --output semgrep-results.txt . || true
 
@@ -42,13 +43,14 @@ jobs:
         with:
           name: semgrep-sast-results
           path: |
+            semgrep-results.sarif
             semgrep-results.json
             semgrep-results.txt
           retention-days: 30
 
       - name: Upload SARIF to GitHub Security Tab
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@v4
         if: always()
         with:
-          sarif_file: semgrep-results.json
+          sarif_file: semgrep-results.sarif
         continue-on-error: true
